# redis-experiments

./: .gitignore  README.md  checkstyle.xml  pom.xml  re.yml
dat/: distrib-jemalloc-4.0.3  distrib-libc  distrib-tcmalloc-2.0
jemalloc_test/: CMakeLists.txt  jemallocDistrib.conf  jemallocDistribCompare.conf  jemalloc_size.cc
src/main/java/com/mogujie/mst/: Gopall.java  RedisExperimentConfig.java  package-info.java
src/main/java/com/mogujie/mst/script/: SimpleTest.java
src/main/java/com/mogujie/mst/stackoverflow/: Gopall.java
src/main/java/mobing/fql/: RedisExperimentConfig.java  package-info.java
src/main/java/mobing/fql/script/: SimpleTest.java
src/main/java/mobing/fql/stackoverflow/: Gopall.java
src/main/java/mobing/fql/wayout/: SecondaryIndexDataType.java  WeatherInfo.java  WeatherLevel.java
src/main/resources/: delete.lua  insert.lua  logback.groovy
src/test/java/mobing/fql/wayout/: SecondaryIndexDataTypeTest.java  WeatherLevelTest.java
