CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(JEMALLOC_SIZE)
# SET(JEMALLOC_HOME /home/fenqi/redis-stable/deps/jemalloc)
SET(JEMALLOC_HOME /Users/fenqi/Code/redis/deps/jemalloc)
# SET(JEMALLOC_HOME /Users/fenqi/Downloads/jemalloc-3.6.0)
LINK_DIRECTORIES(${JEMALLOC_HOME}/lib)
INCLUDE_DIRECTORIES(${JEMALLOC_HOME}/include)
ADD_EXECUTABLE(jemalloc_size jemalloc_size.cc)
# TARGET_LINK_LIBRARIES(jemalloc_size jemalloc)
TARGET_LINK_LIBRARIES(jemalloc_size ${JEMALLOC_HOME}/lib/libjemalloc.a)
TARGET_LINK_LIBRARIES(jemalloc_size pthread)
